# ffmpeg_collector

./: .gitignore  CMakeLists.txt  README.md  i_stream.h  protocol_rtsp.h  stream_factory.cpp  stream_factory.h  utility_tool.cpp  utility_tool.h
src/: control.cpp  control.h  control_complex.cpp  control_complex.h  filter_complex.cpp  filter_complex.h  i_stream.h  protocol_rtsp.cpp  protocol_rtsp.h  protocol_rtsp_pull.cpp  protocol_rtsp_pull.h  protocol_rtsp_push.cpp  protocol_rtsp_push.h  stream_factory.cpp  stream_factory.h  stream_file.cpp  stream_file.h  stream_package_decode.cpp  stream_package_decode.h  stream_package_encode.cpp  stream_package_encode.h  utility_tool.cpp  utility_tool.h
test/: CMakeLists.txt  main.cpp  test_stream.cpp  test_stream.h  thread_proxy.h
